log/build_2025-08-20_09-40-34/task_one/stderr.log
  File "/home/ubuntu/eyantra_task/install/task_one/lib/python3.10/site-packages/task_one/run_in_spiral.py", line 18
    liner_vel++
               ^
SyntaxError: invalid syntax

